# Universal-AI-forms

./: README.md
formdl-oss/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
formdl-oss/examples/profiles/: sample_formdl.json
formdl-oss/examples/prompts/: sample_prompt_pack.md
formdl-oss/examples/schemas/: formdl.schema.json  sample_output.schema.json
formdl-oss/src/formdl/: __init__.py  cli.py  codec.py  models.py  pdf.py  qr.py  validate.py
formdl-oss/tests/: test_codec.py  test_models.py
